--- a/test.ipynb
+++ b/test.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "abc05caa",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-11-11T13:48:48.064709Z",
+     "start_time": "2021-11-11T13:48:47.073063Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import h5py\n",
@@ -16,9 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2f0263c3",
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-11-11T13:48:49.518589Z",
+     "start_time": "2021-11-11T13:48:49.513630Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def hash_value_check(filename,hash_value,encoding='sha1'):\n",
@@ -36,81 +44,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "dddb8a2c",
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-11-11T13:50:14.447432Z",
+     "start_time": "2021-11-11T13:48:51.909307Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "filename = './dataset/cmu-mosai/aligned_50.pkl'\n",
+    "RawData = pickle.load(open(filename,'rb'),encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-11-11T13:51:22.893825Z",
+     "start_time": "2021-11-11T13:51:22.890354Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_set = RawData['train']              #可以查看所有的主键\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-11-11T14:00:24.008478Z",
+     "start_time": "2021-11-11T14:00:24.004989Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<KeysViewHDF5 ['d1']>"
+       "dict_keys(['raw_text', 'audio', 'vision', 'id', 'text', 'text_bert', 'annotations', 'classification_labels', 'regression_labels'])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filename = './dataset/cmu-mosai/data/audio_test.h5'\n",
-    "\n",
-    "f = h5py.File(filename,'r')   #打开h5文件\n",
-    "f.keys()                            #可以查看所有的主键\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "02e8c849",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = f['d1'][:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "e3d2cc22",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4832, 20, 74)"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3f02cf2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "3cf251b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_file_name = './dataset/cmu-mosai/lbl/mosi2uni_Test_labels_disgust.csv'"
+    "train_set.keys()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2b3c7799",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-11-11T14:01:04.668057Z",
+     "start_time": "2021-11-11T14:01:04.663560Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16326, 50, 74)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_set['audio'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-11-11T13:52:44.394898Z",
+     "start_time": "2021-11-11T13:52:41.600775Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import librosa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-11-11T13:54:17.114865Z",
+     "start_time": "2021-11-11T13:54:16.025649Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "audio_path = './test_audio_files/knuckle1.wav'\n",
+    "\n",
+    "y, sr = librosa.load(audio_path)\n",
+    "# using librosa to get audio features (f0, mfcc, cqt)\n",
+    "hop_length = 1024 # hop_length smaller, seq_len larger\n",
+    "\n",
+    "f0 = librosa.feature.zero_crossing_rate(y, hop_length=hop_length).T # (seq_len, 1)\n",
+    "mfcc = librosa.feature.mfcc(y=y, sr=sr, hop_length=hop_length, htk=True).T # (seq_len, 20)\n",
+    "cqt = librosa.feature.chroma_cqt(y=y, sr=sr, hop_length=hop_length).T # (seq_len, 12)\n",
+    "features = np.concatenate([f0, mfcc, cqt], axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-11-11T13:54:19.154808Z",
+     "start_time": "2021-11-11T13:54:19.150827Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(464, 33)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'filename' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-10b9057c1147>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mlabel_file_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'./dataset/cmu-mosai/lbl/mosi2uni_Test_labels_disgust.csv'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mRawData\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'filename' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "label_file_name = './dataset/cmu-mosai/lbl/mosi2uni_Test_labels_disgust.csv'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +216,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e34c7c3f",
    "metadata": {},
    "outputs": [
     {
@@ -141,19 +236,16 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "bbe7c4af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = './dataset/cmu-mosai/unaligned_50.pkl'\n",
     "\n",
-    "RawData = pickle.load(open(filename,'rb'),encoding='utf-8')\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "9531587e",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +266,6 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e6304248",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +286,6 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "95228d45",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +306,6 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "f742175b",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +326,6 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "41177de9",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +445,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e8af340",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -365,9 +452,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py38]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -379,7 +466,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
